# rust-htmlr

./: Cargo.toml  README.md
docs/for-llm/: doc-for-llm.md
docs/rustdoc/: elem.md  error.md  lib.md  selector.md  slim.md  slimr.md  to_md.md
docs/rustdoc/pretty/: pretty.md  pretty_options.md
docs/rustdoc/to_html/: md_to_html.md
examples/: c01-simple.rs
src/: common.rs  elem.rs  error.rs  html_content.rs  lib.rs  md.rs  to_md.rs
src/md_to_html/: mod.rs  to_html_impl.rs
src/pretty/: mod.rs  pretty_impl.rs  pretty_impl_tests.rs  pretty_options.rs
src/select/: mod.rs  select_impl.rs
src/selector/: mod.rs  select.rs
src/slim/: mod.rs  slim_impl.rs  slim_options.rs  support.rs
src/slimmer/: support.rs
src/slimr/: mod.rs  slim.rs  slim_options.rs
src/to_html/: md_to_html_impl.rs  md_to_html_impl_tests.rs  md_to_html_options.rs  mod.rs
src/to_md/: mod.rs  to_md_impl.rs  to_md_options.rs
